# CtimeLI

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PRD  README.md  architecture.md  install.sh  pyproject.toml  run  uninstall.sh
.cursor/plans/: calendar_calls_hard_stop_f02c9444.plan.md  calendar_calls_no_block_b8d6ddf8.plan.md  countdown_c4_and_docs_e04ae0ce.plan.md  countdown_security_review_7d0cca36.plan.md
crates/nebulaos-cli/: Cargo.toml
crates/nebulaos-cli/src/: mac.rs  main.rs  prompt.rs  ui.rs
crates/nebulaos-core/: Cargo.toml
crates/nebulaos-core/src/: lib.rs  paths.rs
crates/nebulaos-core/src/audio/: mac_mic.rs  mac_say.rs  mod.rs
crates/nebulaos-core/src/config/: mod.rs
crates/nebulaos-core/src/fallback/: claude.rs  mod.rs
crates/nebulaos-core/src/focus/: mac_nsworkspace.rs  mod.rs
crates/nebulaos-core/src/log/: jsonl.rs  mod.rs
crates/nebulaos-core/src/partner/: mod.rs  ollama.rs  prompt.rs
crates/nebulaos-core/src/rag/: jsonl.rs  mod.rs
crates/nebulaos-core/src/session/: mod.rs
crates/nebulaos-core/src/stt/: mac_whisper.rs  mod.rs
crates/nebulaos-core/src/vision/: mod.rs
docs/: README.md  architecture.md  branch-changes-fixes.md  configuration.md  development.md  domain.md  edge-cases.md  features.md  manual-testing.md  porting.md  ports.md
docs/diagrams/: branch-changes-bootstrap.mmd  branch-changes-calendar-dedupe.mmd
manual_tests/: block_screen.sh  blur.sh  calendar_room.sh  hard_stop.sh
src/ctimeli/: __init__.py  __main__.py  cli.py  composition.py  ports.py  terminal_ui.py
src/ctimeli/adapters/: __init__.py
src/ctimeli/adapters/macos/: __init__.py  app_control.py  appkit_init.py  blur.py  calendar.py  overlay.py  permissions.py  python_plist.py  runloop.py  stop_overlay.py  url_opener.py  watch_menu_bar.py  workspace_tidy.py
src/ctimeli/adapters/system/: clock.py  detach.py  dotenv.py  logger.py  null_input.py  runtime.py  signals.py  stdin_source.py  watch_lock.py  wifi.py
src/ctimeli/app/: __init__.py  session_runner.py  watch_runner.py
src/ctimeli/domain/: calendar_fields.py  colors.py  config.py  curves.py  math.py  session.py  timespec.py
tests/: fakes.py  test_appkit_permissions.py  test_apps.py  test_calendar.py  test_calendar_access_cache.py  test_calendar_fields.py  test_cli.py  test_colors.py  test_composition_config.py  test_config.py  test_curves.py  test_dotenv.py  test_keyboard.py  test_macos_calendar_adapter.py  test_manifest.py  test_math.py  test_permissions.py  test_python_plist.py  test_runtime_python.py  test_session.py  test_session_runner.py  test_terminal_ui.py  test_timespec.py  test_watch_runner.py
tools/countdown/: .env.example  calendar_monitor.py  config.py  countdown.py  input_parse.py  pyproject.toml  requirements.txt  run  shake  shake_test.py  shake_tune.py  test_manual.sh
tools/countdown/countdown/: __init__.py  __main__.py  cli.py  composition.py  ports.py
tools/countdown/countdown/adapters/: __init__.py
tools/countdown/countdown/adapters/macos/: __init__.py  app_control.py  applescript_templates.py  block_executor.py  calendar.py  hud.py  keyboard.py  overlay.py  shaker.py  stop_overlay.py  workspace_tidy.py
tools/countdown/countdown/adapters/system/: __init__.py
tools/countdown/countdown/app/: __init__.py  session_runner.py  watch_runner.py
tools/countdown/countdown/domain/: __init__.py  apps.py  blockend.py  calendar.py  config.py  curves.py  manifest.py  math.py  session.py  shake.py  timespec.py
tools/countdown/docs/: README.md  architecture.md  configuration.md  development.md  domain.md  edge-cases.md  features.md  manual-testing.md  porting.md  ports.md
tools/countdown/manual_tests/: blur.sh  calendar.sh  calendar_call.sh  glow.sh  shake.sh  stroke.sh  tidy.sh
tools/countdown/tests/: fakes.py  test_applescript_templates.py  test_apps.py  test_blockend.py  test_calendar.py  test_calendar_fields.py  test_colors.py  test_config.py  test_curves.py  test_keyboard.py  test_macos_calendar_adapter.py  test_manifest.py  test_math.py  test_session.py  test_session_runner.py  test_shake.py  test_timespec.py  test_watch_runner.py
