[package]
name = "nebulaos-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal frontend for Nebulaos. Swappable with a Tauri frontend in v2.0."

[[bin]]
name = "nebulaos"
path = "src/main.rs"

[dependencies]
nebulaos-core = { path = "../nebulaos-core" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
futures.workspace = true
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
