[package]
name = "nebulaos-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core session, partner, and IO traits for Nebulaos. Frontend-agnostic."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
