[package]
name = "nebulaos-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core session, partner, and IO traits for Nebulaos. Frontend-agnostic."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
directories = "5"

[target.'cfg(target_os = "macos")'.dependencies]
cpal = "0.15"
whisper-rs = { version = "0.13", default-features = false }
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.2", features = ["NSString"] }

[features]
default = []
# Enable Metal acceleration in whisper-rs. Requires macOS 10.13+. Build flag
# disabled by default so the first build is most likely to succeed; turn on
# with `cargo build --features mac-accel` once the baseline is working.
mac-accel = ["whisper-rs/metal"]

[dev-dependencies]
tempfile = "3"
