[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "countdown"
version = "0.2.0"
description = "macOS screen-edge countdown timer for time-blind work"
requires-python = ">=3.11"
# Runtime PyObjC frameworks are macOS-only and live in requirements.txt so
# `pip install -e .` works on Linux for running the test suite.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
countdown = "countdown.cli:main"

[tool.setuptools.packages.find]
include = ["countdown*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
